--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,8 @@
 
 @layer base {
   @font-face {
-    font-family: "Techfont";
-    src: url("/fonts/Techfont.ttf") format("truetype");
+    font-family: "EleganTech";
+    src: url("/fonts/EleganTech.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
