--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,8 @@
 @layer base {
   @font-face {
     font-family: "Blinker";
-    src: url("/fonts/Blinker-Light.ttf") format("truetype");
-    font-weight: 300;
+    src: url("/fonts/Blinker-Regular.ttf") format("truetype");
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
   }
